# modern-ogl-sdl2-librocket

./: .gitignore  CMakeLists.txt  README.md  sdlsandbox.sln
sdlsandbox/: CTexture.cpp  CTexture.h  CompiledGeometry.cpp  CompiledGeometry.h  FileWatcherImpl.h  FileWatcherLinux.cpp  FileWatcherOSX.cpp  RocketDefaultKeymapping.cpp  RocketInterfaces.cpp  RocketInterfaces.h  load_shader.cpp  load_shader.h  main.cpp  sdlsandbox.vcxproj  sdlsandbox.vcxproj.filters  test.frag  test.vert
